--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="nav-links">
                 <a href="#mission" data-i18n="nav.mission">Our Mission</a>
                 <a href="#products" data-i18n="nav.products">Products</a>
+                <a href="https://www.linkedin.com/company/svetozar-technologies/" target="_blank" data-i18n="nav.linkedin">LinkedIn</a>
                 <a href="https://github.com/Svetozar-Technologies" target="_blank" class="btn btn-outline" data-i18n="nav.github">GitHub</a>
                 <div id="languageSelector"></div>
             </div>
@@ -300,6 +301,15 @@
                             <span data-i18n="join.github_desc">Star, fork, and contribute</span>
                         </div>
                     </a>
+                    <a href="https://www.linkedin.com/company/svetozar-technologies/" target="_blank" class="join-card">
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                        </svg>
+                        <div>
+                            <strong data-i18n="join.linkedin_title">Follow on LinkedIn</strong>
+                            <span data-i18n="join.linkedin_desc">Updates, feedback &amp; community</span>
+                        </div>
+                    </a>
                     <a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank" class="join-card">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
@@ -353,6 +363,7 @@
                     <h4 data-i18n="footer.community_title">Community</h4>
                     <ul>
                         <li><a href="https://github.com/Svetozar-Technologies" target="_blank">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/company/svetozar-technologies/" target="_blank">LinkedIn</a></li>
                         <li><a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank" data-i18n="footer.discussions">Discussions</a></li>
                     </ul>
                 </div>
