--- a/localpdf/index.html
+++ b/localpdf/index.html
@@ -40,6 +40,7 @@
                 <a href="#product" data-i18n="nav.features">Features</a>
                 <a href="#use-cases" data-i18n="nav.use_cases">Use Cases</a>
                 <a href="#notify" data-i18n="nav.notify">Download</a>
+                <a href="https://www.linkedin.com/company/svetozar-technologies/" target="_blank" data-i18n="nav.linkedin">LinkedIn</a>
                 <a href="https://github.com/Svetozar-Technologies/LocalPDF" target="_blank" class="btn btn-outline" data-i18n="nav.github">GitHub</a>
                 <div id="languageSelector"></div>
             </div>
@@ -488,6 +489,14 @@
                     <p data-i18n="notify.star_desc">MIT Licensed &bull; Open Source</p>
                     <span class="coming-soon-badge" data-i18n="notify.star_cta">GitHub Repository</span>
                 </a>
+                <a href="https://www.linkedin.com/company/svetozar-technologies/" target="_blank" class="download-card">
+                    <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                    </svg>
+                    <h3>Follow for Updates</h3>
+                    <p>Share feedback &bull; Stay tuned for new releases</p>
+                    <span class="coming-soon-badge">Follow on LinkedIn</span>
+                </a>
             </div>
             <div class="system-requirements">
                 <h4 data-i18n="notify.planned_heading">System Requirements</h4>
@@ -535,6 +544,7 @@
                     <h4 data-i18n="footer.community_title">Community</h4>
                     <ul>
                         <li><a href="https://github.com/Svetozar-Technologies" target="_blank">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/company/svetozar-technologies/" target="_blank">LinkedIn</a></li>
                         <li><a href="https://github.com/Svetozar-Technologies/LocalPDF/discussions" target="_blank" data-i18n="footer.discussions">Discussions</a></li>
                     </ul>
                 </div>
