--- a/localmind/index.html
+++ b/localmind/index.html
@@ -472,7 +472,7 @@
                 <p data-i18n="download.subtitle">Available now for macOS, Windows, and Linux.</p>
             </div>
             <div class="download-cards">
-                <a href="#" class="download-card" id="macOSDownloadBtn" data-download-url="https://github.com/Svetozar-Technologies/LocalMind/releases/download/v1.2.3/LocalMind-1.2.3-macOS.dmg">
+                <a href="#" class="download-card" id="macOSDownloadBtn" data-download-url="https://github.com/Svetozar-Technologies/LocalMind/releases/download/v1.2.3/LocalMind-1.2.0-macOS.dmg">
                     <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
                     </svg>
@@ -480,22 +480,22 @@
                     <p data-i18n="download_details.macos_desc">macOS 12+ (Intel & Apple Silicon)</p>
                     <span class="download-size" data-i18n="download_details.macos_size">~800 MB (+ 1.5 GB model on first run)</span>
                 </a>
-                <a href="https://github.com/Svetozar-Technologies/LocalMind/releases/download/v1.2.3/LocalMind-1.2.3-Windows.zip" class="download-card" id="windowsDownloadBtn">
+                <div class="download-card" id="windowsDownloadBtn" style="opacity: 0.6; cursor: default;">
                     <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M0 3.449L9.75 2.1v9.451H0m10.949-9.602L24 0v11.4H10.949M0 12.6h9.75v9.451L0 20.699M10.949 12.6H24V24l-12.9-1.801"/>
                     </svg>
-                    <h3 data-i18n="download.windows">Windows v1.2.3</h3>
+                    <h3 data-i18n="download.windows">Windows - Coming Soon</h3>
                     <p data-i18n="download_details.windows_desc">Windows 10+ (64-bit)</p>
-                    <span class="download-size" data-i18n="download_details.windows_size">~300 MB (+ 1.5 GB model on first run)</span>
-                </a>
-                <a href="https://github.com/Svetozar-Technologies/LocalMind/actions/runs/21212599525" target="_blank" class="download-card" id="linuxDownloadBtn">
+                    <span class="download-size" data-i18n="download_details.windows_size">Coming Soon</span>
+                </div>
+                <div class="download-card" id="linuxDownloadBtn" style="opacity: 0.6; cursor: default;">
                     <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12.504 0c-.155 0-.315.008-.48.021-4.226.333-3.105 4.807-3.17 6.298-.076 1.092-.3 1.953-1.05 3.02-.885 1.051-2.127 2.75-2.716 4.521-.278.832-.41 1.684-.287 2.489a.424.424 0 00-.11.135c-.26.268-.45.6-.663.839-.199.199-.485.267-.797.4-.313.136-.658.269-.864.68-.09.189-.136.394-.132.602 0 .199.027.4.055.536.058.399.116.728.04.97-.249.68-.28 1.145-.106 1.484.174.334.535.47.94.601.81.2 1.91.135 2.774.6.926.466 1.866.67 2.616.47.526-.116.97-.464 1.208-.946.587-.003 1.23-.269 2.26-.334.699-.058 1.574.267 2.577.2.025.134.063.198.114.333l.003.003c.391.778 1.113 1.132 1.884 1.071.771-.06 1.592-.536 2.257-1.306.631-.765 1.683-1.084 2.378-1.503.348-.199.629-.469.649-.853.023-.4-.2-.811-.714-1.376v-.097l-.003-.003c-.17-.2-.25-.535-.338-.926-.085-.401-.182-.786-.492-1.046h-.003c-.059-.054-.123-.067-.188-.135a.357.357 0 00-.19-.064c.431-1.278.264-2.55-.173-3.694-.533-1.41-1.465-2.638-2.175-3.483-.796-1.005-1.576-1.957-1.56-3.368.026-2.152.236-6.133-3.544-6.139z"/>
                     </svg>
-                    <h3 data-i18n="download.linux">Linux v1.2.3</h3>
+                    <h3 data-i18n="download.linux">Linux - Coming Soon</h3>
                     <p data-i18n="download_details.linux_desc">Ubuntu 22.04+ / AppImage</p>
-                    <span class="download-size" data-i18n="download_details.linux_size">~4 GB (GitHub Artifact)</span>
-                </a>
+                    <span class="download-size" data-i18n="download_details.linux_size">Coming Soon</span>
+                </div>
             </div>
             <div class="system-requirements">
                 <h4 data-i18n="download_details.system_req_heading">System Requirements</h4>
@@ -684,7 +684,7 @@
                     </div>
                     <h3 data-i18n="modal.success_title">✓ Thank You!</h3>
                     <p data-i18n="modal.success_text">We'll keep you updated on new features and improvements.</p>
-                    <a href="https://github.com/Svetozar-Technologies/LocalMind/releases/download/v1.2.3/LocalMind-1.2.3-macOS.dmg" class="btn btn-primary btn-lg btn-download-final" download data-i18n="modal.download_btn">
+                    <a href="https://github.com/Svetozar-Technologies/LocalMind/releases/download/v1.2.3/LocalMind-1.2.0-macOS.dmg" class="btn btn-primary btn-lg btn-download-final" download data-i18n="modal.download_btn">
                         Download LocalMind Now
                     </a>
                 </div>
